--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,23 +375,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Roosevelt says to Lincoln, I will bet you $50 I can get the bartender to give me a free drink. Lincoln says, I am in!'"
+       "['\"I will bet you $50 I can get the bartender to give me a free drink.\"',\n",
+       " '\"I am in!\"']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "patternB =re.sub('\"','',text9)\n",
-    "patternB"
+    "patternB = '\"[^\"]*\"'\n",
+    "re.findall(patternB, text9)"
    ]
   },
   {
